test/libyul/yulSyntaxTests/dot_consecutive_variabledeclaration.yul
{
    let a..b := 1
}
// ----
// SyntaxError 7771: (10-14): "a..b" is not a valid identifier (contains consecutive dots).
